# code.FORCE

./: .gitignore  CMakeLists.txt  README.md
include/backend/: ibackend.hpp
include/core/: ibackend.hpp  types.hpp
include/gap/tensor/: tensor.hpp
include/tensor/: tensor.hpp  tensor.tpp
scripts/: build.sh
src/backend/cpu_scalar/: cpu_scalar.cpp
test/: test.cpp
